--- a/MorseClock/Debug/makefile
+++ b/MorseClock/Debug/makefile
@@ -8,6 +8,7 @@ CG_TOOL_ROOT := C:/ti/ccsv5/tools/compiler/tms470_4.9.5
 
 ORDERED_OBJS += \
 $(GEN_CMDS__FLAG) \
+"./Drivers/Morse.obj" \
 "./startup_ccs.obj" \
 "./main.obj" \
 -l"libc.a" \
@@ -22,7 +23,9 @@ RMDIR := RMDIR /S/Q
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include subdir_vars.mk
+-include Drivers/subdir_vars.mk
 -include subdir_rules.mk
+-include Drivers/subdir_rules.mk
 -include objects.mk
 
 ifneq ($(MAKECMDGOALS),clean)
@@ -124,8 +127,8 @@ MorseClock.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 # Other Targets
 clean:
 	-$(RM) $(TMS470_EXECUTABLE_OUTPUTS__QUOTED) "MorseClock.out"
-	-$(RM) "main.pp" "startup_ccs.pp" 
-	-$(RM) "main.obj" "startup_ccs.obj" 
+	-$(RM) "main.pp" "startup_ccs.pp" "Drivers\Morse.pp" 
+	-$(RM) "main.obj" "startup_ccs.obj" "Drivers\Morse.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
