--- a/MorseClock/.project
+++ b/MorseClock/.project
@@ -80,4 +80,11 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Utils/uartstdio.c</name>
+			<type>1</type>
+			<locationURI>PARENT-5-PROJECT_LOC/StellarisWare/utils/uartstdio.c</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
